[package]
name = "uri-pattern-matcher"
version = "0.1.1"
authors = ["guillaume.mazollier@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gmiam/uri-pattern-matcher.git"
documentation = "https://docs.rs/uri-pattern-matcher"
description = """
URI (or path) pattern matching
"""
keywords = ["URI", "pattern", "matching"]
edition = "2018"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md"]


[dependencies]
